--- a/contentcss.css
+++ b/contentcss.css
@@ -338,7 +338,7 @@ html { height: 100%;}
 .container4{
   width: 100%;
   height: 100%;
- background: url('office.jpg') no-repeat center center fixed; 
+ background: url('Office.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
